--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,9143],[],[[4,0,0,[],[1,236,8907],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,35429],[[4,5,6,0,[],[1,40,35389],[],[[7,0,8,[],[1,552,12588],[]],[9,0,10,[],[1,13141,10966],[]],[11,0,12,[],[1,24108,11319],[]]],[],[3,3,0,0]]],[],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test Swaglabs","*C:\\Users\\Asus FA506\\Desktop\\robot-ui\\testCases\\test_swaglabs.robot","*testCases/test_swaglabs.robot","*Login And Add Product To Cart"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Flow","*C:\\Users\\Asus FA506\\Desktop\\robot-ui\\testCases\\flow","*testCases/flow","*Test","*C:\\Users\\Asus FA506\\Desktop\\robot-ui\\testCases\\flow\\test.robot","*testCases/flow/test.robot","*Login and Logout successfully","*<p>Test login and logout functionality with valid credentials\x3c/p>","*Login failed with invalid username","*<p>Test login functionality with invalid username\x3c/p>","*Login failed with invalid password","*<p>Test login functionality with invalid password\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Test Swaglabs","name":"Test Swaglabs","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:35","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:35","fail":0,"id":"s1","label":"Flow","name":"Flow","pass":3,"skip":0},{"elapsed":"00:00:35","fail":0,"id":"s1-s1","label":"Flow.Test","name":"Test","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1771001131168;
+window.output["baseMillis"] = 1771078439213;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 9148;
+window.output["generated"] = 35441;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
